--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
 <div class="bg">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root">
-      <div id="tsparticles"></div>
+<!--       <div id="tsparticles"></div> -->
 
 <script src="tsparticles.engine.min.js"></script>
     </div>
